--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -29,6 +29,6 @@ If you're not a developer, you can still use the API. We have many integrations 
 
 </CardGroup>
 
-<Snippet file="sdks.mdx" />
+<Snippet file="official-sdks.mdx" />
 
 <Snippet file="openapi.mdx" />
