--- a/resources/sdks.mdx
+++ b/resources/sdks.mdx
@@ -4,6 +4,6 @@ description: "Moderation API's server-side helper libraries (also known as serve
 icon: code
 ---
 
-<Snippet file="sdks.mdx" />
+<Snippet file="official-sdks.mdx" />
 
 <Snippet file="openapi.mdx" />
