--- a/_snippets/review-flagged.mdx
+++ b/_snippets/review-flagged.mdx
@@ -1,6 +1,6 @@
 ## 3. Review flagged content (optional)
 
-If the AI flags the content, it will appear in the [Review Queue](https://dash.moderationapi.com/moderation).
+If the AI flags the content, it will appear in the [Review Queue](https://dash.moderationapi.com/project/latest/review/queue).
 
 Head to the review queue to validate that the content is submitted correctly.
 
