update to secretKey

--- a/api-reference/execute-an-action.mdx
+++ b/api-reference/execute-an-action.mdx
@@ -25,7 +25,7 @@ import ModerationAPI from "@moderation-api/sdk";
 const moderationApi = new ModerationAPI();
 
 // Or pass key explicitly
-// const moderationApi = new ModerationAPI({ key: '<token>' });
+// const moderationApi = new ModerationAPI({ secretKey: '<token>' });
 
 await moderationApi.actions.execute({
   contentIds: ["60c9e1c0e4e7e1001c7a0e1e", "60c9e1c0e4e7e1001c7a0e1f"],
