--- a/guides/user-flagged-content.mdx
+++ b/guides/user-flagged-content.mdx
@@ -166,7 +166,7 @@ export const moderationApi = new ModerationAPI();
 
 // Or pass key explicitly
 // export const moderationApi = new ModerationAPI({
-//   key: process.env.MODERATION_API_KEY,
+//   secretKey: process.env.MODERATION_API_KEY,
 // });
 ```
 
