--- a/quickstart/typescript.mdx
+++ b/quickstart/typescript.mdx
@@ -42,7 +42,7 @@ import ModerationAPI from "@moderation-api/sdk";
 const moderationApi = new ModerationAPI();
 
 // Option 2: Pass key explicitly
-// const moderationApi = new ModerationAPI({ key: 'proj_...' });
+// const moderationApi = new ModerationAPI({ secretKey: 'proj_...' });
 
 // Submit text for moderation
 const result = await moderationApi.content.submit({
