--- a/review-queues/webhooks.mdx
+++ b/review-queues/webhooks.mdx
@@ -146,7 +146,7 @@ import ModerationAPI from "@moderation-api/sdk";
 const moderationApi = new ModerationAPI();
 
 // Option 2: Pass key explicitly
-// const moderationApi = new ModerationAPI({ key: 'proj_...' });
+// const moderationApi = new ModerationAPI({ secretKey: 'proj_...' });
 
 export async function POST(request: Request) {
   try {
